Updated docs to remove appiapay references

--- a/html/_modules/manta/wallet.html
+++ b/html/_modules/manta/wallet.html
@@ -213,7 +213,7 @@
 <span class="sd">        if the URL is invalid.</span>
 
 <span class="sd">        Args:</span>
-<span class="sd">            url: manta url (ex. manta://developer.beappia.com/2848839943)</span>
+<span class="sd">            url: manta url (ex. manta://developer.mantaproto.com/2848839943)</span>
 
 <span class="sd">        Returns:</span>
 <span class="sd">            a new configured but unconnected instance</span>
@@ -282,7 +282,7 @@
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Convenience method to check if Manta url is valid</span>
 <span class="sd">        Args:</span>
-<span class="sd">            url: manta url (ex. manta://developer.beappia.com/2848839943)</span>
+<span class="sd">            url: manta url (ex. manta://developer.mantaproto.com/2848839943)</span>
 
 <span class="sd">        Returns:</span>
 <span class="sd">            A match object</span>
