--- a/html/_modules/manta/payproc.html
+++ b/html/_modules/manta/payproc.html
@@ -376,7 +376,7 @@
 <span class="sd">        Args:</span>
 <span class="sd">            key_file: File name of PEM private key of Payment Processor. This</span>
 <span class="sd">              will be used to sign messages</span>
-<span class="sd">            certificate: File name of Manta Certificate Authority, IE Appia</span>
+<span class="sd">            certificate: File name of Manta Certificate Authority, IE mantaproto</span>
 <span class="sd">            host: MQTT Broker host</span>
 <span class="sd">            starting_txid: Transaction ID are progressive, starting from the</span>
 <span class="sd">              one specified</span>
